WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138865
[EFL] REGRESSION(176066): It made all performance tests fail
https://bugs.webkit.org/show_bug.cgi?id=138865
Summary
[EFL] REGRESSION(176066): It made all performance tests fail
Csaba Osztrogonác
Reported
2014-11-19 02:42:38 PST
before:
https://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2%20%28Perf%29/builds/3764
after:
https://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2%20%28Perf%29/builds/3765
After
https://trac.webkit.org/changeset/176066
performance tests fail with EFL 1.11 and 1.12 too. (
https://trac.webkit.org/changeset/176196
bumped EFL version to 1.12 )
Attachments
Patch
(1.33 KB, patch)
2014-11-24 08:46 PST
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2014-11-21 05:41:59 PST
Any idea what is the problem with
r176066
and how to fix it?
Gyuyoung Kim
Comment 2
2014-11-21 05:59:36 PST
(In reply to
comment #1
)
> Any idea what is the problem with
r176066
and how to fix it?
If we can't find it now, I think we have to revert it.
Csaba Osztrogonác
Comment 3
2014-11-21 06:02:32 PST
(In reply to
comment #2
)
> (In reply to
comment #1
) > > Any idea what is the problem with
r176066
and how to fix it? > If we can't find it now, I think we have to revert it.
Unfortunaltely bumping EFL to 1.12 depends on
r176066
, so we should try to avoid reverting them.
Gyuyoung Kim
Comment 4
2014-11-21 06:19:45 PST
(In reply to
comment #3
)
> (In reply to
comment #2
) > > (In reply to
comment #1
) > > > Any idea what is the problem with
r176066
and how to fix it? > > If we can't find it now, I think we have to revert it. > > Unfortunaltely bumping EFL to 1.12 depends on
r176066
, > so we should try to avoid reverting them.
ok, Ryuan's patch might be reason of test failures. Ryuan, can you check it ?
Gyuyoung Kim
Comment 5
2014-11-24 07:49:05 PST
When I run performance test locally using below command, all tests are failures regardless of
r176066
. I will run performance test without EFL 1.12. $> ./Tools/Scripts/run-perf-tests --platform=efl --release --webkit-test-runner Running Bindings/document-implementation.html (4 of 141) error: Bindings/document-implementation.html ERR<23647>:evas_main lib/evas/canvas/evas_gl.c:42 evas_gl_new() Evas GL engine not available. ERR<23657>: lib/eina/eina_module.c:263 eina_module_new() safety check failed: len > 0 is false ERR<23647>:efreet_cache lib/efreet/efreet_cache.c:1108 on_send_register() org.freedesktop.DBus.Error.ServiceUnknown The name org.enlightenment.Efreet was not provided by any .service files FAILED Finished: 6.731030 s
Csaba Osztrogonác
Comment 6
2014-11-24 07:52:27 PST
(In reply to
comment #5
)
> When I run performance test locally using below command, all tests are > failures regardless of
r176066
. I will run performance test without EFL 1.12. > > > $> ./Tools/Scripts/run-perf-tests --platform=efl --release > --webkit-test-runner > > Running Bindings/document-implementation.html (4 of 141) > error: Bindings/document-implementation.html > ERR<23647>:evas_main lib/evas/canvas/evas_gl.c:42 evas_gl_new() Evas GL > engine not available. > ERR<23657>: lib/eina/eina_module.c:263 eina_module_new() safety check > failed: len > 0 is false > ERR<23647>:efreet_cache lib/efreet/efreet_cache.c:1108 on_send_register() > org.freedesktop.DBus.Error.ServiceUnknown The name org.enlightenment.Efreet > was not provided by any .service files > > FAILED > Finished: 6.731030 s
Have you set the hacky symlinks to make it work? (
bug134023
)
Ryuan Choi
Comment 7
2014-11-24 08:46:26 PST
Created
attachment 242165
[details]
Patch
Ryuan Choi
Comment 8
2014-11-24 08:48:32 PST
(In reply to
comment #0
)
> before: >
https://build.webkit.org/builders/EFL%20Linux%2064
- > bit%20Release%20WK2%20%28Perf%29/builds/3764 > after: >
https://build.webkit.org/builders/EFL%20Linux%2064
- > bit%20Release%20WK2%20%28Perf%29/builds/3765 > > After
https://trac.webkit.org/changeset/176066
performance tests fail with > EFL 1.11 and 1.12 too. > (
https://trac.webkit.org/changeset/176196
bumped EFL version to 1.12 )
Sorry, I was little bit busy. It's because of destruction order between Evas_GL and Evas_GL_Surface.
Ryuan Choi
Comment 9
2014-11-24 08:50:31 PST
(In reply to
comment #6
)
> (In reply to
comment #5
) > > When I run performance test locally using below command, all tests are > > failures regardless of
r176066
. I will run performance test without EFL 1.12. > > > > > > $> ./Tools/Scripts/run-perf-tests --platform=efl --release > > --webkit-test-runner > > > > Running Bindings/document-implementation.html (4 of 141) > > error: Bindings/document-implementation.html > > ERR<23647>:evas_main lib/evas/canvas/evas_gl.c:42 evas_gl_new() Evas GL > > engine not available. > > ERR<23657>: lib/eina/eina_module.c:263 eina_module_new() safety check > > failed: len > 0 is false > > ERR<23647>:efreet_cache lib/efreet/efreet_cache.c:1108 on_send_register() > > org.freedesktop.DBus.Error.ServiceUnknown The name org.enlightenment.Efreet > > was not provided by any .service files > > > > FAILED > > Finished: 6.731030 s > > Have you set the hacky symlinks to make it work? (
bug134023
)
Or, below might be required to run run-perf-tests in a local. export DISABLE_XVFB_DRIVER=1
Csaba Osztrogonác
Comment 10
2014-11-24 12:10:57 PST
Comment on
attachment 242165
[details]
Patch rs=me
WebKit Commit Bot
Comment 11
2014-11-24 12:48:35 PST
Comment on
attachment 242165
[details]
Patch Clearing flags on attachment: 242165 Committed
r176522
: <
http://trac.webkit.org/changeset/176522
>
WebKit Commit Bot
Comment 12
2014-11-24 12:48:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug