[EFL] REGRESSION(176066): It made all performance tests fail https://bugs.webkit.org/show_bug.cgi?id=138865

Reviewed by Csaba Osztrogonác.

Since r176066, there are crash because evas_gl_surface is destroyed with
invalid evas_gl instance after evas_gl is destroyed.

* UIProcess/API/efl/EwkView.cpp:
(EwkView::~EwkView):


Canonical link: https://commits.webkit.org/156901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176522 268f45cc-cd09-0410-ab3c-d52691b4dbfc